# action-githubkit

./: .dockerignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pyright.yml
docker/: Dockerfile
src/action_githubkit/: __main__.py  config.py  github.py  script.py
